added a few more comments in pipeline

--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -287,6 +287,36 @@
    "source": [
     "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**7 & 8 The solution is launching** \n",
+    "\n",
+    "The app is upp and running! We have a db up on Heroku but when we tried to run the prediction we ran out of ram(and we're too cheap to pay). However its runnable and you get a own movie(predicted revenue is low) where we show the running app. \n",
+    "One problem is that low budget results in very low revenue this i probably due to that the model uses both budget and budget_year_ratio. Another reason is that movies that where missing budget info(=0) often also had very low revenue.\n",
+    "\n",
+    "However most of the time we get a really decent prediction(within 300 000 of the actual revenue), considering how easy to use the app is(only  10 fields) and the small size of the train/test set we are happy. \n",
+    "\n",
+    "People loves movies so there could be an intrest for this app even if it probably wont be a comercial success."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**7 & 8 The solution is launching** \n",
+    "\n",
+    "The app is upp and running! We have a db up on Heroku but when we tried to run the prediction we ran out of ram(and we're too cheap to pay). However its runnable and you get a own movie(predicted revenue is low) where we show the running app. \n",
+    "One problem is that low budget results in very low revenue this i probably due to that the model uses both budget and budget_year_ratio. Another reason is that movies that where missing budget info(=0) often also had very low revenue.\n",
+    "\n",
+    "However most of the time we get a really decent prediction(within 300 000 of the actual revenue), considering how easy to use the app is(only  10 fields) and the small size of the train/test set we are happy. \n",
+    "\n",
+    "People loves movies so there could be an intrest for this app even if it probably wont be a comercial success."
+   ]
   }
  ],
  "metadata": {
