Added some comments in the pipeline notebook

--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Importing libraries"
    ]
@@ -50,11 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Using Pandas to load/read train, test and sample_sub set"
    ]
@@ -89,13 +81,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Droping the lable(\"revenue\") before Scaling.\n",
+    "Dropping the label(\"revenue\") before Scaling.\n",
     "\n",
     "Saving label as y, using numpy log1p on label(logarithmic element-wise) to get better score.\n",
     "\n",
@@ -129,11 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "A very light weight pipeline with Robust Scaler, which takes care of outliers"
    ]
@@ -168,6 +152,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Saving the pipeline as a joblib file after fitting it.\n",
+    "We can then use is in the deployment to transform our data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -188,8 +184,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Seting up our chosen model. We tried several different but landed on this one."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -216,20 +223,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "Setting parameters for light gradient boosting model regressor (above)\n",
-    "Using random search to optimize(below), note that I removed all but the best params to save time."
-   ]
+    "After running it through randomized search as this got better score than gridsearch and these parameters got the best score in the kaggle competition."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
    "source": [
     "Random_Search_Params ={\n",
@@ -257,11 +260,195 @@
     "# Using parameters already set above, replace in the best from the random search\n",
     "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
     "params['max_depth'] = random_search.best_params_['max_depth']\n",
-    "params['num_leaves'] = random_search.best_params_['num_leaves']\n",
-    "\n",
-    "\n",
-    "\n",
+    "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Checking the best estimator, this was more for figuring out the parameters while we were still modifying it."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "random_search.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Dumping the trained model for use in the deployment."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n",
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:  3.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "Random_Search_Params ={\n",
+    "    \"max_depth\": [4],\n",
+    "    \"min_data_in_leaf\": [15],\n",
+    "    'learning_rate': [0.01],\n",
+    "    'num_leaves': [40],\n",
+    "    'boosting_type' : ['gbdt'],\n",
+    "    'objective' : ['regression'],\n",
+    "    'random_state' : [501], \n",
+    "    }\n",
+    "\n",
+    "n_HP_points_to_test = 50\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=lgb_model, param_distributions= Random_Search_Params, \n",
+    "    n_iter=n_HP_points_to_test,\n",
+    "    cv=3,\n",
+    "    refit=True,\n",
+    "    random_state=314,\n",
+    "    verbose=True)\n",
+    "\n",
+    "random_search.fit(prepared, y)\n",
+    "\n",
+    "# Using parameters already set above, replace in the best from the random search\n",
+    "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
+    "params['max_depth'] = random_search.best_params_['max_depth']\n",
+    "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the best estimator, this was more for figuring out the parameters while we were still modifying it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LGBMRegressor(bagging_fraction=0.9, bagging_freq=1, bagging_seed=11,\n",
+       "              boosting='gbdt', feature_fraction=0.9, lambda_l1=0.2,\n",
+       "              learning_rate=0.01, max_depth=4, metric='rmse',\n",
+       "              min_data_in_leaf=15, n_estimators=10000, nthread=4, num_leaves=40,\n",
+       "              objective='regression', random_state=501, verbosity=-1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dumping the trained model for use in the deployment."
    ]
   },
   {
@@ -285,37 +472,7 @@
     }
    ],
    "source": [
-    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "**7 & 8 The solution is launching** \n",
-    "\n",
-    "The app is upp and running! We have a db up on Heroku but when we tried to run the prediction we ran out of ram(and we're too cheap to pay). However its runnable and you get a own movie(predicted revenue is low) where we show the running app. \n",
-    "One problem is that low budget results in very low revenue this i probably due to that the model uses both budget and budget_year_ratio. Another reason is that movies that where missing budget info(=0) often also had very low revenue.\n",
-    "\n",
-    "However most of the time we get a really decent prediction(within 300 000 of the actual revenue), considering how easy to use the app is(only  10 fields) and the small size of the train/test set we are happy. \n",
-    "\n",
-    "People loves movies so there could be an intrest for this app even if it probably wont be a comercial success."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**7 & 8 The solution is launching** \n",
-    "\n",
-    "The app is upp and running! We have a db up on Heroku but when we tried to run the prediction we ran out of ram(and we're too cheap to pay). However its runnable and you get a own movie(predicted revenue is low) where we show the running app. \n",
-    "One problem is that low budget results in very low revenue this i probably due to that the model uses both budget and budget_year_ratio. Another reason is that movies that where missing budget info(=0) often also had very low revenue.\n",
-    "\n",
-    "However most of the time we get a really decent prediction(within 300 000 of the actual revenue), considering how easy to use the app is(only  10 fields) and the small size of the train/test set we are happy. \n",
-    "\n",
-    "People loves movies so there could be an intrest for this app even if it probably wont be a comercial success."
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)"
    ]
   }
  ],
@@ -335,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   },
   "papermill": {
    "duration": 66.827638,
